--- a/SGI/SGI.UI/Components/Layout/NavMenu.razor
+++ b/SGI/SGI.UI/Components/Layout/NavMenu.razor
@@ -15,14 +15,32 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="IniciarSesion">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Registrarse
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="IniciarSesion">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> IniciarSesion
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Transacciones
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Producto
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Categorias">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Categorias
             </NavLink>
         </div>
     </nav>
