--- a/SGI/SGI.UI/Components/Pages/Home.razor
+++ b/SGI/SGI.UI/Components/Pages/Home.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>SGI!</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Sistema de gestion de inventario! </h1>
 
-Welcome to your new app.
+
