--- a/SGI/SGI.UI/Components/Layout/NavMenu.razor
+++ b/SGI/SGI.UI/Components/Layout/NavMenu.razor
@@ -27,22 +27,27 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
+            <NavLink class="nav-link" href="Transacciones">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Transacciones
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Producto
+            <NavLink class="nav-link" href="productos">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Productos
             </NavLink>
         </div>
-
-        <div class="nav-item px-3">
+         <div class="nav-item px-3">
             <NavLink class="nav-link" href="Categorias">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Categorias
             </NavLink>
         </div>
+         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Gestiondeusuario">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> GestionDeUusarios
+            </NavLink>
+        </div>
+
     </nav>
 </div>
 
