--- a/SGI/SGI.UI/Components/Pages/Registrarse.razor
+++ b/SGI/SGI.UI/Components/Pages/Registrarse.razor
@@ -7,8 +7,8 @@
 <div class="body-form">
     <section class="seccion-formulario">
         <div class="contenedor-formulario">
-            <h1 class="titulo">Registrarse</h1>
-            <form class="form" @onsubmit="Ejecutar">
+            <form class="form" @onsubmit="Ejecutar" style="display: flex;flex-direction: column;align-items: center;justify-content: center;">
+                <h1 class="titulo">Registrarse</h1>
                 <div class="elemento-input">
                     <input type="text" @bind="_nombre" id="input-nombre" placeholder=" Nombre" required>
                 </div>
@@ -25,7 +25,7 @@
                     <button type="submit" class="boton-inicio">Registrarse</button>
                 </div>
                 <div>
-                    <a href="/">¿Ya tenes cuenta?</a>
+                    <a href="/IniciarSesion">Si ya tenes cuenta podes iniciar sesion !</a>
                 </div>
             </form>
         </div>
