--- a/SGI/SGI.UI/Components/Pages/GestionDeUsuario.razor
+++ b/SGI/SGI.UI/Components/Pages/GestionDeUsuario.razor
@@ -14,27 +14,27 @@
     <hr style="border: none; border-top: 2px solid #333; width: 80%;">
 </thead>
 <PageTitle>Gestion de usuarios</PageTitle>
-@foreach (var usuario in verusuarios.Ejecutar())
+@foreach (var cli in verusuarios.Ejecutar())
 {
 <tr style="display: flex; gap: 10%;">
     <div>
-        <td>@usuario.IdUsuario</td>
+    <td>@cli.IdUsuario</td>
     </div>
     <div>
-        <td>@usuario.Nombre</td>
+    <td>@cli.Nombre</td>
     </div>
     <div>
-        <td>@usuario.Apellido</td>
+    <td>@cli.Apellido</td>
     </div>
     <div>
-        <td>@usuario.Email</td>
+    <td>@cli.Email</td>
     </div>
     <td>
-        <button class="btn btn-danger" @onclick="()=>eliminar(usuario.Email)">
-            Elliminar
-        </button>
-        <button class="btn btn-primary"> Editar</button>
-    </td>
+<button class="btn btn-danger" @onclick="()=>eliminar(cli.Email)">
+Elliminar
+</button>
+<button class="btn btn-primary"> Editar</button>
+</td>
 </tr>
 <hr style="border: none; border-top: 2px solid #333; width: 80%;">
 }
