--- a/SGI/SGI.UI/Components/Pages/IniciarSesion.razor
+++ b/SGI/SGI.UI/Components/Pages/IniciarSesion.razor
@@ -38,7 +38,7 @@
         try
         {
             var usuarioActual = iniciarsession.Ejecutar(email, password);
-            Navigation.NavigateTo("/Productos");
+            Navigation.NavigateTo($"/Home/{usuarioActual.IdUsuario}");
         }
         catch (Exception ex)
         {
