--- a/SGI/SGI.UI/Components/Layout/NavMenu.razor
+++ b/SGI/SGI.UI/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">SGI.UI</a>
+        <a class="navbar-brand" href="">Gestion De Inventario</a>
     </div>
 </div>
 
@@ -44,7 +44,7 @@
         </div>
          <div class="nav-item px-3">
             <NavLink class="nav-link" href="Gestiondeusuario">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> GestionDeUusarios
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> GestionDeUsarios
             </NavLink>
         </div>
 
