se movio el gitignore al lugar correcto

--- a/SGI/SGI.UI/Components/Layout/NavMenu.razor
+++ b/SGI/SGI.UI/Components/Layout/NavMenu.razor
@@ -78,6 +78,6 @@
         usuarioActual.IdUsuario = null;
 
         // Redirigir al formulario de inicio de sesión
-        Navigation.NavigateTo("/Home");
+        Navigation.NavigateTo("/IniciarSesion");
     }
 }
