--- a/SGI/SGI.UI/Components/Pages/Producto.razor
+++ b/SGI/SGI.UI/Components/Pages/Producto.razor
@@ -4,7 +4,6 @@
 @inject DarAltaProducto productoAlta
 @inject DarBajaProducto productoBaja
 @inject ModificarProducto productoModificar
-@inject ProductoValidador validador
 
 <PageTitle> Producto </PageTitle>
 
@@ -86,7 +85,12 @@
         </div>
     </section>
 </div>
-
+@if (!string.IsNullOrEmpty(ErrorMensaje))
+{
+    <div style="color: red;">
+        @ErrorMensaje
+    </div>
+}
 @code {
     private string _nombre;
     private string _descripcion;
@@ -105,9 +109,6 @@
         if (_accionSeleccionada == 1)
         {
             try {
-            validador.ValidarNombre(_nombre);
-            validador.ValidarPrecioUnitario(_precioUnitario);
-            validador.ValidarStockDisponible(_stockDisponible);
             productoAlta.Ejecutar(_nombre, _descripcion, _precioUnitario, _stockDisponible,_idCategoria);
             Navigation.NavigateTo("/");  // Redirige después de dar de alta
             }
@@ -131,9 +132,6 @@
     private void Modificar()
     {
             try{
-            validador.ValidarNombre(_nuevoNombre);
-            validador.ValidarPrecioUnitario(_nuevoPrecio);
-            validador.ValidarStockDisponible(_nuevoStock);
             productoModificar.Ejecutar(_idProducto, _nuevoNombre, _nuevaDesc, _nuevoPrecio, _nuevoStock, _nuevaCategoria); 
             Navigation.NavigateTo("/");  // Redirige después de modificar
             }
