--- a/SGI/SGI.UI/Components/Pages/Transaccion.razor
+++ b/SGI/SGI.UI/Components/Pages/Transaccion.razor
@@ -51,7 +51,7 @@
 @code {
     private int _productoIdAlta;
     private int _cantidadAlta;
-    private string _tipoAlta;
+    private string? _tipoAlta;
     private int _idTransaccionBaja;
 
     private void AltaTransaccion() {        
