--- a/SGI/SGI.UI/Components/Pages/Home.razor
+++ b/SGI/SGI.UI/Components/Pages/Home.razor
@@ -7,7 +7,7 @@
 
 <h1>Sistema de gestion de inventario </h1>
 @if(usuarioActual.IdUsuario != null){
-    <p>Bienvenido @usuarioActual.Nombre @usuarioActual.Apellido @usuarioActual.Email</p>
+    <p>Bienvenido @usuarioActual.Nombre @usuarioActual.Apellido !</p>
 }
 
 @code{
