--- a/SGI/SGI.UI/Components/Layout/NavMenu.razor
+++ b/SGI/SGI.UI/Components/Layout/NavMenu.razor
@@ -61,6 +61,11 @@
                 </NavLink>
             </div>
         }
+        <div class="nav-item px-3">
+                <NavLink class="nav-link" href="Registrarse">
+                    <span class="bi bi-person-circle" aria-hidden="true"></span> Registrarse
+                </NavLink>
+        </div>
     </nav>
 </div>
 
